# s3-bucket-operator

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yaml
src/: controller.rs  crdgen.rs  gateway.rs  lib.rs  main.rs
yaml/: crd.yaml  demo-bucket-cert.yaml  deployment.yaml
