[package]
name = "s3bto-rs"
description = "S3 bucket TLS operator"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.18.0", features = ["v1_25"], default-features = false }
schemars = { version = "0.8.11", features = ["chrono"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.18"
chrono = { version = "0.4.23", features = ["serde"] }
tonic = { version = "0.8.3", optional = true }
thiserror = "1.0.37"
anyhow = "1.0.69"
log = "0.4.17"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "0.2.8"
hyper = "0.14.23"
tower-test = "0.4.0"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.82.0"